chore: fix typo

--- a/content/1.get-started/1.introduction.md
+++ b/content/1.get-started/1.introduction.md
@@ -18,7 +18,7 @@ or buy/rent claim lands or buildings, to make or be part of a town, including ou
 
 ## Community at the Core
 
-At Wangyland Community, community is more than just a word; it's our foundation. We believe in creating a welcoming and warm environment where players from various backgrounds can come together, form lasting friendships, and embark on adventures together.
+At Wangyland Community, community is more than just a word it's our foundation. We believe in creating a welcoming and warm environment where players from various backgrounds can come together, form lasting friendships, and embark on adventures together.
 
 To be a part of this extraordinary journey, ask questions, share your knowledge, or simply chat with other players, we invite you to join our Discord community.
 
