chore(introduction): add key features list

--- a/content/1.get-started/1.introduction.md
+++ b/content/1.get-started/1.introduction.md
@@ -16,6 +16,16 @@ gameplay.
 You can make shops and trade your valuable items, make farm to get money, and battle toe to toe with any other player in our arena. We also allow player to sell
 or buy/rent claim lands or buildings, to make or be part of a town, including our own.
 
+## Key Features
+
+- Cross-platform play for MCPE, Bedrock, and Java Edition.
+- True SMP experience for survival multiplayer gameplay.
+- Kit system with daily, weekly, and monthly rewards.
+- Player-owned shops and a vibrant in-game economy.
+- Sethome feature for easy location management.
+- Thrilling PvP battles in dedicated arenas.
+- Land claim system for territory control.
+
 ## Community at the Core
 
 At Wangyland Community, community is more than just a word it's our foundation. We believe in creating a welcoming and warm environment where players from various backgrounds can come together, form lasting friendships, and embark on adventures together.
