--- a/content/1.get-started/2.usage.md
+++ b/content/1.get-started/2.usage.md
@@ -3,46 +3,28 @@ title: Usage
 description: Usage minecraft server.
 ---
 
-# Reqruitments
+# Usage
 
-- Minecraft Launcher - Original by Mojang (Recommended)
-- SKlauncher / TLauncher
+Lets play!
 
 ## Java
 
-1. Open your minecraft launcher
-2. Select version 1.20 Release
-3. Copy this IP Server > wangylandid.aternos.me:56345
-4. Play
+IP Server
 
-## MCPE
+```bash
+wangylandid.aternos.me:56345
+```
 
-1. Open your MCPE App
-2. Add server
-3. IP: wangylandid.aternos.me
-4. Port: 56345
-5. Play
+## Bedrock Edition - MCPE
 
-<!-- <template>
-  <h2 id="guide-kit" class="lg:text-6xl text-4xl outfit-800 border-b lg:pb-8 pb-2 lg:mb-4 mb-2 border-gray-700">Usage</h2>
+IP Server
 
-  <p class="pt-2 outfit-600 text-xl">Reqruitments</p>
+```bash
+wangylandid.aternos.me
+```
 
-  <p class="pt-6 outfit-400 text-md">Launcher</p>
+Port
 
-  <p class="mt-2 leading-8">
-    1. Minecraft Launcher (Original by Mojang)<br />
-    2. SKlauncher / TLauncher
-  </p>
-
-  <p class="mt-2 leading-8">IMPORTANT: Must have internet connection</p>
-
-  <p class="pt-8 outfit-600 text-xl">Step By Step</p>
-
-  <p class="mt-3 leading-8">
-    1. Open your minecraft launcher<br />
-    2. Select version 1.20 Release<br />
-    3. Copy this IP Server > wangylandid.aternos.me<br />
-    4. Play
-  </p>
-</template> -->
+```bash
+56345
+```
