chore(KIT): fix typo

--- a/content/2.commands/1.kit.md
+++ b/content/2.commands/1.kit.md
@@ -1,6 +1,6 @@
 ---
 title: KIT
-description: KIT Tailwind CSS to use OSE UI.
+description: KIT are sets of items that can be given out to players when a command is run.
 ---
 
 # KIT
