--- a/content/1.get-started/1.introduction.md
+++ b/content/1.get-started/1.introduction.md
@@ -13,8 +13,7 @@ happy to have new members join us and be part of our server.
 Our server is a Survival Multiplayer Server, so you can only play survival Minecraft. But there is still many things you can do that are beyond just a normal survival
 gameplay. 
 
-You can make shops and trade your valuable items, make farm to get money, and battle toe to toe with any other player in our arena. We also allow player to sell
-or buy/rent claim lands or buildings, to make or be part of a town, including our own.
+You can make shops and trade your valuable items, make farm to get money, and battle toe to toe with any other player in our arena.
 
 ## Key Features
 
