--- a/content/2.commands/3.sethome.md
+++ b/content/2.commands/3.sethome.md
@@ -35,5 +35,5 @@ Show all your saved homes (list)
 
 ## Note
 
-- Max 5 for rank [Member]<br />
-- Max 10 for rank [Co-Chief]
+- Max 5 for [Member] rank
+- Max 10 for [Co-Chief] rank
