docs: add example chat message

--- a/content/3.advanced/4.chat.md
+++ b/content/3.advanced/4.chat.md
@@ -10,5 +10,15 @@ Chat is a messaging system used to communicate with other players.
 ## Commands
 
 ```bash
-/tell name_player message #example /tell DewaGaming hello
+/tell name_player message
+```
+
+Example
+
+```bash
+/tell DewaGaming hello
+```
+
+```bash
+/tell Lukman hi bro!
 ```
