--- a/content/2.commands/1.random-teleport.md
+++ b/content/2.commands/1.random-teleport.md
@@ -7,7 +7,7 @@ description: Random Teleport feature allows the server owner to forcefully telep
 
 Random Teleport feature allows the server owner to forcefully teleport players to a random location in a world.
 
-NOTE: Only can use in /warp resource
+NOTE: Only can use in **/warp resource**
 
 ## Commands
 
