--- a/content/2.commands/5.claim.md
+++ b/content/2.commands/5.claim.md
@@ -19,8 +19,11 @@ Claimlist will increase as you play, the longer you play, the more the claim lis
 Remove claim
 
 ```bash
-/abandonclaim #one
-/abandonallclaim #all
+/abandonclaim
+```
+
+```bash
+/abandonallclaim #remove all claim
 ```
 
 Showing claim list
@@ -46,7 +49,13 @@ Showing claim list
 
 ```bash
 /trust name_player
+```
+
+```bash
 /accesstrust name_player #only buttons, levers, and beds.
+```
+
+```bash
 /containertrust name_player #only buttons, levers, beds, crafting gear, containers, and animals.
 ```
 
@@ -59,8 +68,11 @@ Showing trust list
 Untrust player
 
 ```bash
-/untrust name_player #one
-/untrust all #all
+/untrust name_player
+```
+
+```bash
+/untrust all #all player
 ```
 
 Grants a player permission to share his permission level with others.
