docs: improved commands

--- a/content/2.commands/2.backpack.md
+++ b/content/2.commands/2.backpack.md
@@ -1,18 +1,77 @@
 ---
-title: Backpack
-description: Allows players to have backpacks that provide them with extra inventory space.
+title: Claim
+description: In essence, "claim" is a square area of land marked with your name on the server, which, by default, other players cannot build, destroy, or loot within.
 ---
 
-# Backpack
+# Claim
 
-Allows players to have backpacks that provide them with extra inventory space.
+In essence, "claim" is a square area of land marked with your name on the server, which, by default, other players cannot build, destroy, or loot within.
+
+Claimlist will increase as you play, the longer you play, the more the claim list will be.
+
+## How to Claim?
+
+1. Hold out your golden shovel in your Main Hand and Right-Click on the ground where you want the first corner of your claim to be.
+2. While continuing to hold the Golden Shovel in your hand, walk over to the spot you want the second corner of your claim and Right Click it. Note that claims have to be over 100 square blocks in size. (10x10+ or equivalent)
 
 ## Commands
 
+Remove claim
+
 ```bash
-/backpack 
+/abandonclaim
+```
 
-#or 
+NOTE: you must stand at the claim location
 
-/bp
+Remove all claim
+
+```bash
+/abandonallclaim
+```
+
+Showing claim list
+
+```bash
+/claimlist
+```
+
+### Example pictures
+
+![](/img/guide/land-claim-1.png)
+
+### Example videos
+
+- [Video](https://www.youtube.com/shorts/-HGflP3kFDY){style="color: rgb(96 165 250);"}
+- [Search](https://www.youtube.com/results?search_query=minecraft+how+to+claim+with+golden+shovel){style="color: rgb(96 165 250);"}
+
+---
+
+### Trust
+
+3 Type to trust player
+
+```bash
+/trust name_player
+/accesstrust name_player #only buttons, levers, and beds.
+/containertrust name_player #only buttons, levers, beds, crafting gear, containers, and animals.
+```
+
+Showing trust list
+
+```bash
+/trustlist
+```
+
+Untrust player
+
+```bash
+/untrust name_player #one
+/untrust all #all
+```
+
+Grants a player permission to share his permission level with others.
+
+```bash
+/permissiontrust name_player
 ```
