--- a/content/2.commands/4.teleport.md
+++ b/content/2.commands/4.teleport.md
@@ -9,12 +9,19 @@ You can teleport another player on this server.
 
 ## Commands
 
+Teleport
+
 ```bash
 /tpa name_player
+```
+
+Invite people teleport to your current location
+
+```bash
 /tpahere name_player
 ```
 
-Plus commands for Co-Chief
+Plus commands for **Co-Chief**
 
 ```bash
 /tp name_player
