docs: improved commands

--- a/content/3.advanced/3.economy.md
+++ b/content/3.advanced/3.economy.md
@@ -27,6 +27,14 @@ Show money
 
 ```bash
 /bal
+```
+
+Show all players money
+
+```bash
 /baltop
-/baltop number #example /baltop 4
+```
+
+```bash
+/baltop number #example /baltop 2
 ```
