--- a/content/1.get-started/1.introduction.md
+++ b/content/1.get-started/1.introduction.md
@@ -17,7 +17,7 @@ You can make shops and trade your valuable items, make farm to get money, and ba
 
 ## Key Features
 
-- Cross-platform play for MCPE, Bedrock, and Java Edition.
+- Cross-platform Java and Bedrock (Mobile, Desktop, Console).
 - True SMP experience for survival multiplayer gameplay.
 - Player-owned shops and a vibrant in-game economy.
 - Kit system with daily, weekly, and monthly rewards.
