docs: revision a position sidebar icon

--- a/src/content/1.get-started/1.introduction.md
+++ b/src/content/1.get-started/1.introduction.md
@@ -33,4 +33,4 @@ To be a part of this extraordinary journey, ask questions, share your knowledge,
 
 ### Discord
 
-Join us! [<Icon class="leading-none -mt-1 hover:text-indigo-300" size="20" name="mdi:discord" />](https://discord.gg/pgNpcyu9QA)
+Join us! [<Icon class="leading-none -mb-1 hover:text-indigo-300" size="20" name="mdi:discord" />](https://discord.gg/pgNpcyu9QA)
